# tinostream

./: .gitignore  CMakeLists.txt  README.md
tinostream/core/: README.md
tinostream/core/framework/: model.cc
tinostream/core/framework/function/: activation.cc  neuron.cc
tinostream/core/framework/function/math/: space.cc  tensor.cc
tinostream/core/framework/model/: linear.cc  sequential.cc
tinostream/core/framework/utils/: wordINvec.cc
tinostream/core/framework/utils/json/: jsonParse.cc  jsonTools.cc
tinostream/core/include/: neuron.hpp  sequential.hpp  tinostream
tinostream/core/include/framework/: model.hpp
tinostream/core/include/framework/function/: activation.hpp  neuron.hpp
tinostream/core/include/framework/function/math/: space.hpp  tensor.hpp
tinostream/core/include/utils/: wordINvec.hpp
tinostream/core/include/utils/json/: jsonParse.hpp  jsonTools.hpp
tinostream/core/include/utils/json/rapidjson/: document.h
tinostream/core/kernel/: activation.cc  neuron.cc
tinostream/core/kernel/model/: sequential.cc
tinostream/core/kernel/tensor/: tensor.cc  tensor_buffer.cc
tinostream/core/util/data/json/: JsonParse.cc  JsonParse.py  JsonTools.cc
tinostream/cpp/: CMakeLists.txt  cpp_api.cc  cpp_api.hpp  makefile
tinostream/cpp/API/: cpp_api.cc
tinostream/cpp/include/: tensor.hpp  tinostream
tinostream/cpp/include/kernel/: neuron.cc  tensor.hpp
tinostream/cpp/include/util/: JsonParse.hpp
tinostream/py/: main.py
